--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
     "authors": [
         {
             "name": "Patrick Foh",
-            "email": "patrickfoh@gmail.com",
+            "email": "patrickfoh@gmail.com"
         }
     ],
     "require": {
-
+        "illuminate/database": "~5.3",
         "illuminate/support": "~5.1",
         "php" : "~5.6|~7.0",
-        "guzzlehttp/guzzle": "5.*|6.*"
+        "guzzlehttp/guzzle": "5.*|6.*",
+        "nesbot/carbon": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0||~6.0",
