Updated package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Mrfoh/Mulla",
+    "name": "mrfoh/mulla",
     "type": "library",
     "description": "Paystack",
     "keywords": [
